syntax="proto3";

option go_package="./pb";

package proto;

import "security_msg.proto";


service SecurityService{
  rpc Login (UserCredentials) returns (Tokens);
  rpc RefreshSession (RefreshRequest) returns (RefreshResponse);
  rpc ValidateToken (Token) returns (ValidateTokenResponse);
  rpc SendOTP (OTPInfo) returns (OTPInfo);
  rpc ValidateOTP (OTPInfo) returns (OTPInfo);
}
